[gd_scene load_steps=12 format=3 uid="uid://xo4tij046b54"]

[ext_resource type="Script" path="res://code/ui_elements/scroll_option.gd" id="1_5so4a"]
[ext_resource type="FontFile" uid="uid://bfwgk4mk161u1" path="res://art/fonts/Sen/Sen-Bold.ttf" id="1_cr7xd"]
[ext_resource type="PackedScene" uid="uid://cfymk32awtlp4" path="res://code/ui_elements/btn_option.tscn" id="2_pvk35"]
[ext_resource type="Theme" uid="uid://bojam3itnewjv" path="res://art/themes/t_slider.tres" id="2_uvbuk"]
[ext_resource type="Theme" uid="uid://nk0jychsh28u" path="res://art/themes/t_btn_base.tres" id="4_evdvs"]
[ext_resource type="Texture2D" uid="uid://cmbmt4gm5idc8" path="res://art/icons/option_arrow.png" id="4_qqnlw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cx7oa"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0, 0.0196078, 0.101961, 0.639216)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.592157, 0.619608, 0.74902, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uj5v7"]
content_margin_left = 20.0
bg_color = Color(0, 0.02, 0.1, 0.32)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0.807843, 0.317647, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6byly"]
content_margin_left = 20.0
bg_color = Color(0, 0.02, 0.1, 0.32)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.592157, 0.619608, 0.74902, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8em5w"]
content_margin_left = 20.0
bg_color = Color(0, 0.02, 0.1, 0.32)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.592157, 0.619608, 0.74902, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_r41en"]
LineEdit/colors/font_color = Color(0.843137, 0.854902, 0.92549, 1)
LineEdit/colors/font_selected_color = Color(1, 0.807843, 0.317647, 1)
LineEdit/colors/font_uneditable_color = Color(0.843137, 0.854902, 0.92549, 1)
LineEdit/font_sizes/font_size = 24
LineEdit/fonts/font = ExtResource("1_cr7xd")
LineEdit/styles/focus = SubResource("StyleBoxFlat_uj5v7")
LineEdit/styles/normal = SubResource("StyleBoxFlat_6byly")
LineEdit/styles/read_only = SubResource("StyleBoxFlat_8em5w")

[node name="ScrollOption" type="Control"]
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -836.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_5so4a")
items = PackedStringArray()

[node name="Slider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_right = -418.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(0, 8)
theme = ExtResource("2_uvbuk")
max_value = 10.0

[node name="Option" parent="." instance=ExtResource("2_pvk35")]
custom_minimum_size = Vector2(200, 42)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -258.0
offset_top = -21.0
offset_right = -42.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
item_count = 0
disable_arrow = true

[node name="RButton" type="Button" parent="."]
custom_minimum_size = Vector2(42, 42)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("4_evdvs")
icon = ExtResource("4_qqnlw")

[node name="LButton" type="Button" parent="."]
custom_minimum_size = Vector2(42, 42)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -21.0
offset_right = -258.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
rotation = 3.14159
pivot_offset = Vector2(21, 21)
theme = ExtResource("4_evdvs")
theme_override_styles/normal = SubResource("StyleBoxFlat_cx7oa")
icon = ExtResource("4_qqnlw")

[node name="Line" type="LineEdit" parent="."]
visible = false
custom_minimum_size = Vector2(200, 42)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -258.0
offset_top = -21.0
offset_right = -42.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
theme = SubResource("Theme_r41en")
editable = false

[connection signal="drag_started" from="Slider" to="." method="_on_slider_drag_started"]
[connection signal="mouse_entered" from="Slider" to="." method="_on_slider_mouse_entered"]
[connection signal="mouse_exited" from="Slider" to="." method="_on_slider_mouse_exited"]
[connection signal="value_changed" from="Slider" to="." method="_on_slider_value_changed"]
[connection signal="item_selected" from="Option" to="." method="_on_option_item_selected"]
[connection signal="pressed" from="RButton" to="." method="_on_r_button_pressed"]
[connection signal="pressed" from="LButton" to="." method="_on_l_button_pressed"]
